--- a/aluraflix/index.html
+++ b/aluraflix/index.html
@@ -1,20 +1,35 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
+
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AluraFlix</title>
-</head>
-<body>
-    <div class="container">
-  <h1 class="page-title">
-    AluraFlix
-  </h1>
-  <img src="https://www.alura.com.br/assets/img/imersoes/dev-2021/logo-imersao-aluraflix.svg" class="page-logo" alt="">
-</div>
-<a href="https://alura.com.br/" target="_blank">
-  <img src="https://www.alura.com.br/assets/img/home/alura-logo.svg" alt="" class="alura-logo">
-</a>
-</body>
+    <title>Meu AluraFlix</title>
+    <link rel="stylesheet" href="./style.css">
+  </head>
+
+  <body>
+    <h1 class="page-title">
+      Meu AluraFlix - Adicione Seus Filmes
+    </h1>
+    <img src="https://www.alura.com.br/assets/img/imersoes/dev-2021/logo-imersao-aluraflix.svg" class="page-logo"
+        alt="">
+    <div id="container-input">
+      <!-- imagens -->
+    </div>
+    <form class="btn-add">
+      <label id="legenda" for="url">Digite a URL do filme:</label>
+      <input type="text" id="url" name="url" size="20"><br><br>
+      <label id="legenda" for="nome-filme">Digite o nome do filme:</label>
+      <input type="text" id="nome-filme" name="nome-filme" size="20"><br><br>
+      <input id="btn" type="button" value="adicionar_" onclick="addFilme()"></input>
+    </form>
+    
+    <a href="https://alura.com.br/" target="_blank">
+      <img src="https://www.alura.com.br/assets/img/home/alura-logo.svg" alt="" class="alura-logo">
+    </a>
+    <script src="./script.js"></script>
+  </body>
+
 </html>
