--- a/tabela_classificacao/index.html
+++ b/tabela_classificacao/index.html
@@ -30,18 +30,8 @@
                 </tr>
             </thead>
             <tbody id="tabelaJogadores">
-                <tr>
-                    <td>Paulo</td>
+                <!-- <tr>
                     <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td><button onClick="adicionarVitoria()">Vitória</button></td>
-                    <td><button onClick="adicionarEmpate()">Empate</button></td>
-                    <td><button onClick="adicionarDerrota()">Derrota</button></td>
-                </tr>
-                <tr>
-                    <td>Rafa</td>
                     <td></td>
                     <td></td>
                     <td></td>
@@ -50,7 +40,17 @@
                     <td><button onClick="adicionarEmpate()">Empate</button></td>
                     <td><button onClick="adicionarDerrota()">Derrota</button></td>
                 </tr>
-            </tbody>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td><button onClick="adicionarVitoria()">Vitória</button></td>
+                    <td><button onClick="adicionarEmpate()">Empate</button></td>
+                    <td><button onClick="adicionarDerrota()">Derrota</button></td>
+                </tr>
+            </tbody> -->
         </table>
         <script src="./script.js"></script>
     </body>
