Tabela de Classificacao

--- a/tabela_classificacao/index.html
+++ b/tabela_classificacao/index.html
@@ -52,6 +52,9 @@
                 </tr>
             </tbody> -->
         </table>
+        <button onclick="zerarPontos()">Zerar Pontos</button>
+        <button onclick="addJogador()">Novo Jogador</button>
+        <button onclick="removerJogador()">Remover Jogador</button>
         <script src="./script.js"></script>
     </body>
 
